doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\AsiersaxYT\Documents\DAM\PROG\ProyectoParkingAsierSanchez
-d
C:\Users\AsiersaxYT\Documents\DAM\PROG\ProyectoParkingAsierSanchez\doc
-encoding
windows-1252
-charset
windows-1252
C:\Users\AsiersaxYT\Documents\DAM\PROG\ProyectoParkingAsierSanchez\Parking.java
<---- end of javadoc command ---->
Loading source file C:\Users\AsiersaxYT\Documents\DAM\PROG\ProyectoParkingAsierSanchez\Parking.java...
C:\Users\AsiersaxYT\Documents\DAM\PROG\ProyectoParkingAsierSanchez\Parking.java:101: error: invalid method declaration; return type required
    public        diaMayorNumeroClientes() {
                  ^
1 error
